# c_mem_lib

./: .gitignore  CMakeLists.txt  README.md  main.c
